--- a/index.html
+++ b/index.html
@@ -438,7 +438,8 @@
                         
                         <div class="font_brid color_canary fspx_50 line_height_40">Regalos</div><br><br>
                         
-                        <div class="font_made color_white fspx_25 line_height_30">¡Tu presencia es lo más importante pero si deseas darme un obsequio te agradecería que fuera en efectivo!</div>
+                        <div class="font_made color_white fspx_25 line_height_30">
+                            ¡Tu presencia es lo más importante pero si deseas darme un obsequio te agradecería una lluvia de sobres!</div>
 
                          <br>
                         <img src="sobre.png" class="w_100 wpx_100 mt_10"><br>
